# orthtree

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/gui_sandbox_2d/: CMakeLists.txt  gui_sandbox_2d.cpp
scripts/docker/: docker-compose.yml
scripts/docker/linux/: Dockerfile  entrypoint.sh
src/: CMakeLists.txt
src/orthtree/: CMakeLists.txt  box.h  common.h  node.h  orthtree.h  point.h  vector.h
test/: CMakeLists.txt
test/bench/: bench.cpp
test/bench/cases/: tree.cpp  tree.h
test/common/: test_common.h
test/unittest/: CMakeLists.txt
test/unittest/cases/: box.cpp  point.cpp  tree.cpp  vector.cpp
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt
tests/bench/cases/: tree.cpp
tests/common/: test_common.h
tests/unittests/: CMakeLists.txt  unittests.cpp
tests/unittests/cases/: box.cpp  point.cpp  tree.cpp  vector.cpp
